--- a/src/app/movie_detail/movie_detail.html
+++ b/src/app/movie_detail/movie_detail.html
@@ -6,6 +6,10 @@
     <title>Actu trailer | Movie Detail</title>
   </head>
   <body>
-    <a href="./index.html">Index</a>
+    <header></header>
+    <div class="container">
+      <h1>Movie detail</h1>
+      <a href="./index.html">Index</a>
+    </div>
   </body>
 </html>
