--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -46,3 +46,9 @@ a {
   color: var(--text);
   text-decoration: none;
 }
+
+.container {
+  max-width: 150rem;
+  padding: auto;
+  margin: auto;
+}
