--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,7 +1,24 @@
 :root {
   --text: #333;
   --font-family: "Open Sans", sans-serif;
-  --tmdb: #032541;
+  --tmdbDarkBlue: #032541;
+  --tmdbLightBlue: #01b4e4;
+  --tmdbLightGreen: rgb(30, 213, 169);
+  --tmdbLogoGreen: rgb(144, 206, 161);
+  --tmdbLogoOrange: rgb(253, 193, 112);
+  --tmdbLogoRed: rgb(217, 59, 99);
+  --lightGrey: rgb(227, 227, 227);
+  --accountSilver: rgb(149, 149, 149);
+  --accountPink: rgb(234, 20, 140);
+  --accountPurple: rgb(128, 91, 231);
+  --accountGreen: rgb(1, 210, 119);
+  --accountTeal: rgb(1, 198, 172);
+  --accountLightBlue: rgb(1, 180, 228);
+  --accountBlue: rgb(1, 119, 210);
+  --accountOrange: rgb(210, 119, 1);
+  --accountYellow: rgb(210, 144, 1);
+  --accountRed: rgb(212, 2, 66);
+  // --maxPrimaryPageWidth: 1400px;
   --border-radius: 8px;
   --shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
     0 1px 3px 1px rgba(60, 64, 67, 0.15);
