--- a/src/app/movie_detail/movie_detail.html
+++ b/src/app/movie_detail/movie_detail.html
@@ -7,9 +7,12 @@
   </head>
   <body>
     <header></header>
-    <div class="container">
-      <h1>Movie detail</h1>
-      <a href="./index.html">Index</a>
-    </div>
+    <main>
+      <div class="container">
+        <h1>Movie detail</h1>
+        <a href="./index.html">Index</a>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
